Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35250

Assertion `dec <= 6' failed in my_timestamp_binary_length

    XMLWordPrintable

Details

    Description

      SELECT FROM_UNIXTIME('1922-02-10'), BIT_AND(1);
      

      preview-11.7-preview 5ef8ae9af2bbc6b21a3ab21df65a9e8ffe4d152d

      mariadbd: /git/11.7/sql/compat56.cc:391: uint my_timestamp_binary_length(uint): Assertion `dec <= 6' failed.
      241025 11:01:42 [ERROR] mysqld got signal 6 ;
       
      Server version: 11.7.0-MariaDB-debug-log source revision: 5ef8ae9af2bbc6b21a3ab21df65a9e8ffe4d152d
       
      /lib/x86_64-linux-gnu/libc.so.6(+0x33fd6)[0x7f268c0dafd6]
      sql/compat56.cc:392(my_timestamp_binary_length(unsigned int))[0x560d129f3ab0]
      sql/sql_type.cc:444(Timestamp::to_native(Native*, unsigned int) const)[0x560d12804b6d]
      sql/sql_type.cc:502(Timestamp_or_zero_datetime::to_native(Native*, unsigned int) const)[0x560d1280515e]
      sql/item.h:6830(Item_copy_timestamp::val_native(THD*, Native*))[0x560d12858e5f]
      sql/sql_type.cc:9446(Timestamp_or_zero_datetime_native_null::Timestamp_or_zero_datetime_native_null(THD*, Item*, bool))[0x560d1283d887]
      sql/sql_type.h:2953(Timestamp_or_zero_datetime_native_null::Timestamp_or_zero_datetime_native_null(THD*, Item*))[0x560d12088d1b]
      sql/sql_type.cc:7711(Type_handler::Item_send_timestamp(Item*, Protocol*, st_value*) const)[0x560d1282db8a]
      sql/sql_type.h:6949(Type_handler_timestamp_common::Item_send(Item*, Protocol*, st_value*) const)[0x560d1257b93c]
      sql/item.h:1251(Item::send(Protocol*, st_value*))[0x560d11ce3bf6]
      sql/protocol.cc:1353(Protocol::send_result_set_row(List<Item>*))[0x560d11dbc19c]
      sql/sql_class.cc:3276(select_send::send_data(List<Item>&))[0x560d11f78416]
      sql/sql_class.h:6222(select_result_sink::send_data_with_check(List<Item>&, st_select_lex_unit*, unsigned long long))[0x560d122cf6f5]
      sql/sql_select.cc:25151(end_send_group(JOIN*, st_join_table*, bool))[0x560d122858f9]
      sql/sql_select.cc:23094(do_select(JOIN*, Procedure*))[0x560d122768f6]
      sql/sql_select.cc:5026(JOIN::exec_inner())[0x560d121f32d5]
      sql/sql_select.cc:4809(JOIN::exec())[0x560d121f064c]
      sql/sql_select.cc:5342(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x560d121f4f0a]
      sql/sql_select.cc:625(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x560d121c2940]
      sql/sql_parse.cc:6157(execute_sqlcom_select(THD*, TABLE_LIST*))[0x560d120ddbd6]
      sql/sql_parse.cc:3955(mysql_execute_command(THD*, bool))[0x560d120cd623]
      sql/sql_parse.cc:7879(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x560d120e8c74]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x560d120bf0c3]
      sql/sql_parse.cc:1405(do_command(THD*, bool))[0x560d120bbd5a]
      sql/sql_connect.cc:1448(do_handle_one_connection(CONNECT*, bool))[0x560d125cc278]
      sql/sql_connect.cc:1352(handle_one_connection)[0x560d125cbc03]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x560d133a5ac0]
      nptl/pthread_create.c:478(start_thread)[0x7f268c68b609]
       
      Query (0x6290001092a8): SELECT FROM_UNIXTIME('1922-02-10'), BIT_AND(1)
      

      SELECT 1 FROM (values(1),(2)) dt GROUP BY from_unixtime('a') WITH ROLLUP;
      

      preview-11.7-preview

      mariadbd: /11.7/sql/compat56.cc:391: uint my_timestamp_binary_length(uint): Assertion `dec <= 6' failed.
      241025 10:44:50 [ERROR] mysqld got signal 6 ;
       
      Server version: 11.7.0-MariaDB-debug-log source revision: 5ef8ae9af2bbc6b21a3ab21df65a9e8ffe4d152d
       
      /lib/x86_64-linux-gnu/libc.so.6(+0x33fd6)[0x7efe8e308fd6]
      sql/compat56.cc:392(my_timestamp_binary_length(unsigned int))[0x563adc2a7ab0]
      sql/filesort.cc:2120(Type_handler_timestamp_common::sort_length(THD*, Type_std_attributes const*, SORT_FIELD_ATTR*) const)[0x563adc34133b]
      sql/filesort.cc:2227(sortlength(THD*, Sort_keys*, bool*))[0x563adc341fa9]
      sql/filesort.cc:310(filesort(THD*, TABLE*, Filesort*, Filesort_tracker*, JOIN*, unsigned long long))[0x563adc33396e]
      sql/sql_select.cc:27200(create_sort_index(THD*, JOIN*, st_join_table*, Filesort*))[0x563adbb47c94]
      sql/sql_select.cc:24734(st_join_table::sort_table())[0x563adbb34fc9]
      sql/sql_select.cc:24654(join_init_read_record(st_join_table*))[0x563adbb343ab]
      sql/sql_select.cc:23649(sub_select(JOIN*, st_join_table*, bool))[0x563adbb2d665]
      sql/sql_select.cc:23163(do_select(JOIN*, Procedure*))[0x563adbb2afe5]
      sql/sql_select.cc:5026(JOIN::exec_inner())[0x563adbaa72d5]
      sql/sql_select.cc:4809(JOIN::exec())[0x563adbaa464c]
      sql/sql_select.cc:5342(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x563adbaa8f0a]
      sql/sql_select.cc:625(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x563adba76940]
      sql/sql_parse.cc:6157(execute_sqlcom_select(THD*, TABLE_LIST*))[0x563adb991bd6]
      sql/sql_parse.cc:3955(mysql_execute_command(THD*, bool))[0x563adb981623]
      sql/sql_parse.cc:7879(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x563adb99cc74]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x563adb9730c3]
      sql/sql_parse.cc:1405(do_command(THD*, bool))[0x563adb96fd5a]
      sql/sql_connect.cc:1448(do_handle_one_connection(CONNECT*, bool))[0x563adbe80278]
      sql/sql_connect.cc:1352(handle_one_connection)[0x563adbe7fc03]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x563adcc59ac0]
      nptl/pthread_create.c:478(start_thread)[0x7efe8e8b9609]
       
      Query (0x6290001092a8): SELECT 1 FROM (values(1),(2)) dt GROUP BY from_unixtime('a') WITH ROLLUP
      
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h 40m
                  1d 1h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.